2007-05-23  Jonathon Jongsma  <jjongsma@gnome.org>

	* docs/tutorial/gtkmm-tut.xml: renamed the gmmproc appendix to "Wrapping C
	Libraries with gmmproc" so that it shows up better in google searches for
	'gmmproc'

2007-05-09  Jonathon Jongsma  <jjongsma@gnome.org>

	* docs/tutorial/gtkmm-tut.xml: Another big set of changes to improve pdf
	output.  I shortened a lot of the <programlisting> code in the docbook
	document so that things will fit on a printed page / pdf document.  In
	addition, a lot of little changes were made to reduce a lot of unnecessary
	whitespace in the generated PDF (e.g.  don't wrap <programlisting> or
	<itemizedList> elements in empty <para> tags, etc).  This has the advantage
	of streamlining the markup as well.  I didn't make it all of the way through
	the document, will clean up more in the future.
	* examples/book/drag_and_drop/dndwindow.h: shorten another long line in this
	example so that when it's included into the tutorial it fits on a page

2007-05-09  Jonathon Jongsma  <jjongsma@gnome.org>

	* examples/book/comboboxentry/complex/examplewindow.cc: accidentally broke
	the build on this example when reducing the line length

2007-05-08  Jonathon Jongsma  <jjongsma@gnome.org>

	* docs/tutorial/Makefile.am: add a 'pdf' target so that we can build a pdf
	version of the tutorial more easily.  Also fixed the command for the
	'validate' targets and a couple other minor cleanups.

2007-05-08  Jonathon Jongsma  <jjongsma@gnome.org>

	* examples/book/*: modified all of the book examples to make all lines 80
	characters long or less.  This makes it so that the examples have a chance
	of fitting on the page of a printed pdf version of the tutorial book

2007-05-08  Jonathon Jongsma  <jjongsma@gnome.org>

	* docs/tutorial/gtkmm-tut.xml: LOTS of changes to the tutorial to get it to
	validate against the docbook DTD.  This was necessary because if the xml
	wasn't valid then we couldn't use tools such as docbook2pdf to generate a