@@ -1,3 +1,9 @@
+2007-05-26  Jonathon Jongsma  <jjongsma@gnome.org>
+
+	* gtk/src/gtk_docs_override.xml: update documentation for some FileChooser
+	methods which incorrectly stated that the returned list of strings needs to
+	be freed with Glib::free()
+
 2007-05-23  Jonathon Jongsma  <jjongsma@gnome.org>
 
 	* docs/tutorial/gtkmm-tut.xml: renamed the gmmproc appendix to "Wrapping C
